fix tag buttons on mobile

--- a/source/stylesheets/pages/_videos.scss
+++ b/source/stylesheets/pages/_videos.scss
@@ -54,6 +54,11 @@
     background-color: white;
     color: black;
     border: 1px solid black;
+    @media (max-width: 768px) {
+      background-color: black;
+      color: white;
+      border: 1px solid white;
+    }
   }
   // when clicked, white background
   &.active {
@@ -62,8 +67,13 @@
     border: 1px solid black;
   }
 
-  @media (max-width: 768px) {
-    margin: 0.1rem; // Further adjust margin for smaller screens
-    font-size: 0.7rem; // Reduce font size for smaller screens
-  }
+  // @media (max-width: 768px) {
+  //   margin: 0.1rem; // Further adjust margin for smaller screens
+  //   font-size: 0.7rem; // Reduce font size for smaller screens
+  //   .album-button:hover {
+  //     background-color: black !important;
+  //     color: white !important;
+  //     border: 1px solid white !important;
+  //   }
+  // }
 }
